Fix snackbar z-index

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -31,3 +31,8 @@ button.mat-button {
     background: none;
   }
 }
+
+// make sure snackbar is in above prx-header
+.cdk-overlay-container {
+  z-index: 10000;
+}
